bazel_dep(name = "rules_apple", version = "4.3.1", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "rules_swift", version = "3.4.2", repo_name = "build_bazel_rules_swift")

git_override(
    module_name = "rules_apple",
    commit = "24a5bcfcb35e269fd9c441d3530d6c9a1ca5f7b0",
    remote = "https://github.com/bazelbuild/rules_apple.git",
)
